test/expected/declare_o_plus2_d_rk.out
declare ++ as operator (double) returning reference to S
                        ^
25: error: at least 1 parameter of a non-member operator must be an enum, class, struct, or union, or a reference thereto, or a typedef thereof
